kube-manifests/tasks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      volumes:
        - name: tasks-storage
          persistentVolumeClaim:
            claimName: tasks-pv-claim
      containers:
        - name: tasks
          image: CONTAINER_IMAGE
          volumeMounts:
            - mountPath: /tasks
              name: tasks-storage
