kube-manifests/frontend.yml
  apiVersion: "v1"
  kind: "Service"
  metadata:
    labels:
      app: "react-ui"
    name: "ui-service"
  spec:
    ports:
    - name: "http"
      port: 8080
      targetPort: 8080
    selector:
      app: "react-ui"
    type: "NodePort"
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: "react-ui"
    labels:
      app: react-ui
  spec:
    replicas: 1
    selector:
        matchLabels:
          app: "react-ui"
    template:
      metadata:
        labels:
          app: react-ui
      spec:
        containers:
          - name: "react-ui"
            image: CONTAINER_IMAGE
            imagePullPolicy: "IfNotPresent"
            env: # Add environment variables here
              - name: BACKEND_API_URL
                value: "http://zuul-api-gateway.default.svc.cluster.local:9999"
