kube-manifests/shoes.yml
  apiVersion: "v1" 
  kind: "Service"
  metadata:
    labels:
      app: "shoe-ui"
    name: "shoe"
  spec:
    ports:
    - name: "http"
      port: 1002
      targetPort: 1002
    selector:
      app: "shoe-ui"
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: "shoe-ui"
    labels: 
      app: shoe-ui
  spec:
    replicas: 1
    selector:
        matchLabels:
          app: "shoe-ui"
    template:
      metadata:
        labels:
          app: shoe-ui
      spec:
        containers:
          - name: "shoe-ui"
            image: CONTAINER_IMAGE
            imagePullPolicy: "IfNotPresent"
            ports:
              - containerPort: 1002
