kube-manifests/zuul.yml
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: "zuul-api-gateway"
    name: "zuul-api-gateway"
  spec:
    ports:
    - name: "http"
      port: 9999
      targetPort: 9999
      nodePort: 32470
    type: "NodePort"
    selector:
      app: "zuul-api-gateway"
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: "zuul-api-gateway"
    labels: 
      app: zulu
  spec:
    replicas: 1
    selector:
        matchLabels:
          app: "zuul-api-gateway"
    template:
      metadata:
        labels:
          app: "zuul-api-gateway"
      spec:
        containers:
          - name: "zuul-api-gateway"
            image: CONTAINER_IMAGE
            imagePullPolicy: "IfNotPresent"
            ports:
              - containerPort: 9999
        affinity:
          podAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - react-ui
              topologyKey: "kubernetes.io/hostname"
